migration/Salsa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: salsa
spec:
  selector:
    app: salsa
  ports:
  - port: 80
    targetPort: 80
    name: traffic
