migration/Salsa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salsa
spec:
  ingressClassName: nginx
  rules:
  - host: salsa.s9.devopscloud.link
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: salsa
            port: 
              number: 80
